syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message GetUsersRequest {
  optional int32 limit = 1;
  optional int32 offset = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}